about,userclass,class component,class hooks,class state variable,componentDidMount

--- a/src/index.css
+++ b/src/index.css
@@ -493,3 +493,10 @@
     cursor: pointer;
     font-size: 14px;
 }
+
+
+.user-card{
+    padding:10px;
+    margin:10px;
+    border: 1px solid black;
+}
